--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,7 @@
 #Grails Metadata file
-#Sat Feb 16 15:21:47 EST 2013
+#Sat Feb 16 23:15:57 EST 2013
 app.grails.version=2.2.0
 app.name=classcartography
 app.version=0.1
+plugins.cookie=0.4
+plugins.rest=0.7
